# blang

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Mechanics.md  README.md
.github/workflows/: blang.yml
examples/: addition.b  definition.b  print.b
src/: ast.c  ast.h  binary.cpp  context.h  error.c  error.h  globals.c  globals.h  lexer.c  lexer.l  llvm.cpp  llvm.h  llvm_ir.cpp  main.c  opt.h  optimize.cpp  parser.y  preprocess.c
src/preprocessing/: preprocess.c  preprocess.h
src/processing/: process.h  tokenization.c  tokenization.h
src/std/: mac-silicon.s  x86_64-linux.s
tests/: print.b  variables.b
